# rag-harness

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: dataset.jsonl  predictions_a.jsonl  predictions_b.jsonl
src/rag_harness.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ragharness/: cli.py  compare.py  io.py  metrics.py  models.py  runner.py
tests/: test_metrics.py  test_runner.py
