[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-harness"
version = "0.1.2"
description = "⚡ CLI tool to evaluate and compare RAG systems."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Abhishek Bevinkatti" }
]


dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "rapidfuzz>=3.0.0"
]

[project.urls]
Homepage = "https://github.com/bevinkatti/rag-harness"
Repository = "https://github.com/bevinkatti/rag-harness"

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
rag-harness = "ragharness.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]